Avoid blurry image

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,7 +4,7 @@
 @import "maestrooo";
 
 .container {
-  @include container(860px);
+  @include container(866px);
   padding: rem(0 15px);
 }
 
